--- a/index.html
+++ b/index.html
@@ -18,70 +18,55 @@
 <body>
   <h1>Treasure JS Proof of Concept</h1>
   <form id="autocomplete-remote">
-    <input name="search" autocomplete="off" style="width: 200px">
     <input id="plugin" autocomplete="off" style="width: 200px">
   </form>
   <div id="r"></div>
 </body>
 <script type="text/javascript">
 
-    $(function () {
+$(function () {
 
-        var Plugin = Backbone.Model.extend({
-            label: function () {
-                return this.get("value");
-            }
-        });
+  var Plugin = Backbone.Model.extend({
+    label: function () {
+      return this.get("value");
+    }
+  });
 
-        var PluginCollection = Backbone.Collection.extend({
-            url: function() { return 'http://localhost:3000/api/v1/searches.json' },
-            model: Plugin
-        });
+  var PluginCollection = Backbone.Collection.extend({
+    url: function() { return 'http://localhost:3000/api/v1/searches.json' },
+    model: Plugin
+  });
 
- 
-       var plugins = new PluginCollection([
+  
+  var plugins = new PluginCollection([]);
 
-            // {"name": "backbone-autocomplete"},
-            // {"name": "backbone-memento"},
-            // {"name": "backbone-validations"},
-            // {"name": "backbone-chosen"},
-            // {"name": "backbone-relational"},
-            // {"name": "backbone-bindings"},
-            // {"name": "backbone-boilerplate"},
-            // {"name": "backbone-traversal"},
-            // {"name": "backbone-factory"},
-            // {"name": "jquery"},
-            // {"name": "jquery-ui"},
-            // {"name": "angular.js"},
-            // {"name": "keymaster.js"}
-        ]);
+  new AutoCompleteView({
+    input: $("#plugin"),
+    model: plugins,
+    wait: 50,
+    queryParameter: "q",
+    minKeywordLength: 0,
+    onSelect: function (model) {
+      $("#selected").show().find("p").html(model.label());
+    }
+  }).render();
 
-        new AutoCompleteView({
-            input: $("#plugin"),
-            model: plugins,
-            queryParameter: "q",
-            minKeywordLength: 0,
-            onSelect: function (model) {
-                $("#selected").show().find("p").html(model.label());
-            }
-        }).render();
-
-    });
+});
 </script>
 
 <script>
-  autocompleteRemote = new Backbone.AutocompleteList({
-    url: function() { return 'http://localhost:3000/api/v1/searches.json?q=' + $('form#autocomplete-remote input[name=search]').val() },
-    filter: null,
-    el: $('form#autocomplete-remote input[name=search]'),
-    template: _.template('<p class="result"><%= value %> (<%= name %>)</p>'),
-    delay: 100,
-    minLength: 1,
-    value: function(model) { return model.get('value') },
-    name: function(model) { return model.get('name') },
-  }).resultsView.collection.parse = function(resp) {
-    return resp.terms;
-  };
+autocompleteRemote = new Backbone.AutocompleteList({
+  url: function() { return 'http://localhost:3000/api/v1/searches.json?q=' + $('form#autocomplete-remote input[name=search]').val() },
+  filter: null,
+  el: $('form#autocomplete-remote input[name=search]'),
+  template: _.template('<p class="result"><%= value %> (<%= name %>)</p>'),
+  delay: 100,
+  minLength: 1,
+  value: function(model) { return model.get('value') },
+  name: function(model) { return model.get('name') },
+}).resultsView.collection.parse = function(resp) {
+  return resp.terms;
+};
 
 </script>
 </html>
